--- a/index.html
+++ b/index.html
@@ -1,38 +1,39 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<title>A | B</title>
-				<!-- Latest compiled and minified CSS -->
-				<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-		<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">		
-		<link href="main.css" rel="stylesheet">
-	</head>
-	<body class="bodycolor">
-  	<div class="container">
-    <div class="quotebox clearfix">
-      <h1 id="quoteDisplay"></h1>
-			<p class ="float-right" id="sourceDisplay"></p>
-
-      <br>
-      <br>
-      <div class="social clearfix">
-        <button type="button" class="btn twitter bodycolor"><a class="twitter-share-button"
-  href="https://twitter.com/intent/tweet?hashtags=quotes,freeCodeCamp&related=freecodecamp&text="><img class="icons" src="img/Twitter_Logo.svg" alt="twitter logo"></a></button>
-        <button class="tumblr btn bodycolor"><a class="tumblr-share-button" href="https://www.tumblr.com/widgets/share/"><img class="icons" src="img/tumblr_white.svg"></a></button>
-      </div>
-      <button type="button" class="btn float-right newquote">New quote</button>
-    </div><!--end quotebox-->
+<head>
+	<meta charset="utf-8">
+	<title>A | B</title><!-- Latest compiled and minified CSS -->
+	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+	<link href="main.css" rel="stylesheet">
+</head>
+<body class="bodycolor">
+	<div class="container">
+		<div class="quotebox clearfix">
+			<h1 id="quoteDisplay">Click...</h1>
+			<p class="float-right" id="sourceDisplay">new quote button ↓</p><br>
+			<br>
+			<div class="social clearfix">
+				<button class="btn twitter bodycolor" type="button"><a class="twitter-share-button" href="https://twitter.com/intent/tweet?hashtags=quotes,freeCodeCamp&related=freecodecamp&text="><img alt="twitter logo" class="icons" src="img/Twitter_Logo.svg"></a></button> <button class="tumblr btn bodycolor"><a class="tumblr-share-button" href="https://www.tumblr.com/widgets/share/"><img class="icons" src="img/tumblr_white.svg"></a></button>
+			</div><button class="btn float-right newquote" type="button">New quote</button>
+		</div><!--end quotebox-->
 		<h1 class="asterisk">*</h1>
-		<div class="bubble"><a class="credits" href="https://twitter.com/AmirBizi">By Amir Bizimana</a></div>
+		<div class="bubble">
+			<a class="credits" href="https://twitter.com/AmirBizi">By Amir Bizimana</a>
+		</div>
 	</div><!--end container-->
-	</body>
 	<!-- Latest compiled and minified JavaScript -->
-	<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-	<script src="js/quoteArray.js"></script>
-	<script src="js/main.js"></script>
- </body>
+	<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js">
+	</script> 
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js">
+	</script> 
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js">
+	</script> 
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js">
+	</script> 
+	<script src="js/quoteArray.js">
+	</script> 
+	<script src="js/main.js">
+	</script>
+</body>
 </html>
